@@ -78,6 +78,11 @@ class Color(str):
     The object is in fact a string with class variables.
     """
     def __init__(self, s):
+        if s is None:
+            self.r = None
+            self.g = None
+            self.b = None
+            return
         try:
             self.r = int(s[0:2], 16)
         except ValueError:
